Fix comments being the wrong color.

--- a/RubyBlueTheme.less
+++ b/RubyBlueTheme.less
@@ -54,7 +54,7 @@
     background-color: @rb-red;
 }
 .cm-comment {
-    color: @brightgreen;
+    color: @comment;
 }
 .cm-number {
     color: @rb-lightblue;
